stopped legend overlapping honor pie chart

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,4 @@ img {
     margin-top: 20px;
 }
 
-#search {
-    clear: both;
-}
+
